# golem

./: .clang-files  .clang-format  .gitignore  CMakeLists.txt  LIA1-200.smt2  LICENSE  README.md  \
.circleci/: config.yml
.github/workflows/: build.yml  release.yml
ci/: build_maximally_static.sh  run_commands.sh
src/: CMakeLists.txt  ChcGraph.cc  ChcGraph.h  ChcInterpreter.cc  ChcInterpreter.h  ChcSystem.cc  ChcSystem.h  ModelBasedProjection.cc  ModelBasedProjection.h  Normalizer.cc  Normalizer.h  Options.cc  Options.h  QuantifierElimination.cc  QuantifierElimination.h  TermUtils.cc  TermUtils.h  TransformationUtils.cc  TransformationUtils.h  TransitionSystem.cc  TransitionSystem.h  Validator.cc  Validator.h  Witnesses.cc  Witnesses.h
src/engine/: AcceleratedBmc.cc  AcceleratedBmc.h  ArgBasedEngine.cc  ArgBasedEngine.h  Bmc.cc  Bmc.h  Common.cc  Common.h  DAR.cc  DAR.h  Engine.h  EngineFactory.cc  EngineFactory.h  IMC.cc  IMC.h  Kind.cc  Kind.h  Lawi.cc  Lawi.h  LoopAccelerator.cc  LoopAccelerator.h  PDKind.cc  PDKind.h  ReverseWrapper.cc  ReverseWrapper.h  Spacer.cc  Spacer.h  SymbolicExecution.cc  SymbolicExecution.h  TPA.cc  TPA.h  TRL.cc  TRL.h  TransitionSystemEngine.cc  TransitionSystemEngine.h  Uroboros.cc  Uroboros.h
src/graph/: ChcGraph.cc  ChcGraph.h  ChcGraphBuilder.cc  ChcGraphBuilder.h  GraphTransformations.cc  GraphTransformations.h
src/include/: osmt_parser.h  osmt_solver.h  osmt_terms.h
src/proofs/: AletheSteps.h  ProofSteps.cc  ProofSteps.cpp  ProofSteps.h  StepHandler.cpp  Term.cc  Term.cpp  Term.h  TermVisitor.cpp
src/termination/: Frontend.cc  Frontend.h  LassoDetector.cc  LassoDetector.h  ReachabilityNonterm.cc  ReachabilityNonterm.h  ReachabilityTerm.cc  ReachabilityTerm.h
src/transformers/: BasicTransformationPipelines.cc  BasicTransformationPipelines.h  CommonUtils.cc  CommonUtils.h  ConstraintSimplifier.cc  ConstraintSimplifier.h  DeadClauseRemoval.cc  DeadClauseRemoval.h  EdgeInliner.cc  EdgeInliner.h  FalseClauseRemoval.cc  FalseClauseRemoval.h  LoopTransformation.h  MultiEdgeMerger.cc  MultiEdgeMerger.h  NestedLoopTransformation.cc  NestedLoopTransformation.h  NodeEliminator.cc  NodeEliminator.h  NonLoopEliminator.cc  NonLoopEliminator.h  RemoveUnreachableNodes.cc  RemoveUnreachableNodes.h  SimpleChainSummarizer.cc  SimpleChainSummarizer.h  SingleLoopTransformation.cc  SingleLoopTransformation.h  TransformationPipeline.cc  TransformationPipeline.h  Transformer.h  TrivialEdgePruner.cc  TrivialEdgePruner.h
src/utils/: Dnfizer.h  SExpressions.cc  SExpressions.h  ScopeGuard.h  SmtSolver.cc  SmtSolver.h  StdUtils.h  Timer.h
src/vmt/: FrontEnd.cc  FrontEnd.h  StepCounter.cc  StepCounter.h
test/: CMakeLists.txt  TestTemplate.h  chc-LIA-Lin_082.smt2  proofcheck.py  test_BMC.cc  test_DAR.cc  test_IMC.cc  test_KIND.cc  test_LAWI.cc  test_MBP.cc  test_NNF.cc  test_NormalForms.cc  test_Normalizer.cc  test_PDKIND.cc  test_PredicateAbstraction.cc  test_QE.cc  test_Spacer.cc  test_SymbolicExecution.cc  test_TPA.cc  test_TRL.cc  test_TermUtils.cc  test_Termination.cc  test_TransformationUtils.cc  test_Transformers.cc  test_Uroboros.cc
test/prooftesting/: auxiliary-variables.smt2  greater-than-simp.smt2  ite.smt2  let-terms.smt2  negative_mod.smt2  non-linearity-three-same-predicates-v2.smt2  non-linearity-three-same-predicates.smt2  non-linearity.smt2  non-normalized_1.smt2  non-normalized_2.smt2  predicate_without_args.smt2  proofcheck.py  real_constants.smt2  real_negative_constants.smt2  two-unused-vars.smt2  unused-qv.smt2
